kubernetes/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: awesome
  labels:
    name: awesome
