kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: awesome
  name: awesome-svc
spec:
  selector:
    app.kubernetes.io/name: busybox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
